--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,11 @@
             <h1>Este es el titulo atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las 
                 cosas increibles que se puedenhacer con github</p>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Ratione earum, expedita accusantium sed harum, blanditiis quas, 
+                    eos nihil explicabo quidem praesentium provident iste dolores corrupti nisi voluptate error quibusdam tempore.
+                </p>
         </div>
     </div>
 </body>
