Agregue suscripcion, cambie la cabecera maestra y opuse todo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog maestro</span>
         </div>
         <div id="post">
             <h1>Este es el titulo atractivo e interesante del post</h1>
@@ -21,6 +21,7 @@
                     Ratione earum, expedita accusantium sed harum, blanditiis quas, 
                     eos nihil explicabo quidem praesentium provident iste dolores corrupti nisi voluptate error quibusdam tempore.
                 </p>
+                <p>Suscribete y dale like</p>
         </div>
     </div>
 </body>
