Color de fondo, logo nuevo y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="imagenes/icons8-casa-64.png" alt="">
             Bienvenido a Hyperblog 2.0
             <span id="tagline">Tu blog de cabecera</span>
         </div>
