--- a/blogpost.html
+++ b/blogpost.html
@@ -23,6 +23,9 @@
                 </p>
                 <p>Suscribete y dale like</p>
         </div>
+        <div id=footer>
+            "Hecho con mis manitas sufriendo con el typing un poco"
+        </div>
     </div>
 </body>
 </html>
