--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,7 @@
             <span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="post">
-            <h1>Este es el el titulo atractivo e interesante del post</h1>
+            <h1>Este es el titulo atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las 
                 cosas increibles que se puedenhacer con github</p>
                 <p>
