--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
             <h1>Este es el titulo atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las 
                 cosas increibles que se puedenhacer con github</p>
+                <p><img src="imagenes/1.jpg" alt=""></p>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                     Ratione earum, expedita accusantium sed harum, blanditiis quas, 
