Segundo desafio Platzi

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            <img id="logo" src="imagenes/icons8-casa-64.png" alt="">
+            <img id="logo" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.es%2Fpin%2F375206212684278584%2F&psig=AOvVaw3ORvQVyFGOqD2ikuQkLWN1&ust=1589418454362000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCOiO26TTr-kCFQAAAAAdAAAAABAD" alt="">
             Bienvenido a Hyperblog 2.0
             <span id="tagline">Tu blog de cabecera</span>
         </div>
